tests/e2e/semantics/mutation_block.error
Error: syntax error in story at line 1, column 14

1|    b = {"a": 1}.get(key: "b")
                   ^^^^^^^^^^^^

E0113: Mutation `get` requires argument `default`
